--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -284,16 +284,16 @@ develop:
     produce man page from erb-template
   diff: |
     compare produced man page with usage
-  selftest, st: |
+  selftest: |
     perform selftest with special regard to the environment
-  unittest, ut: |
+  unittest: |
     unittest for features, that cannot easily be tested within the
     main test program
-  widgets, wt: |
+  widgets: |
     excercise selected widgets to be tested
-  lickfile, lf: |
+  lickfile: |
     load and parse a lickfile
-  check-frequencies, cf: |
+  check-frequencies: |
     recalculate and check frequencies for current set of samples
-  read-scale-with-notes, rswn: |
+  read-scale-with-notes: |
     read given scale (first arg) from file (second arg)
