move datadir to ~/harpwise

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,7 +3,7 @@
 #
 # Please do not try to modify it; rather override values in
 #
-#   ~/.harpwise/config.yaml
+#   ~/harpwise/config.yaml
 #
 # ,which mirrors the structure of this file and will be created on
 # first invocation of harpwise.
