not telling the solution

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -626,7 +626,7 @@
   - Began playing the harmonica aged nine and ten.
   - Played with Percy Strother, Milwaukee Slim, Sonny Rogers,
   - 'George "Mojo" Buford, and Lazy Bill Lucas.'
-  - AllMusic noted "R.J. Mischo resurrects the glory days
+  - AllMusic noted: He resurrects the glory days
   - "of '50s Chicago harp-playing..."
   source:
   - https://en.wikipedia.org/wiki/R.J._Mischo
