--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,7 +8,7 @@ name: harpwise
 # We require core24 rather than core22, because our minimum ruby-version
 # is 3.1 and core22 only includes 3.0
 base: core24
-version: '6.11.4'
+version: '6.11.5'
 summary: A harmonica tool for the command line, using microphone and speaker.
 description: |
   Harpwise supports your daily harmonica practice with scales, chords and
@@ -58,6 +58,7 @@ parts:
       - ncurses-base
       - ncurses-term
       - pv
+      - libsixel-bin
 
 layout:             
   $SNAP/usr/bin/figlet:
