--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -212,9 +212,9 @@ quiz:
   replay: |
     harpwise plays a sequence of holes and asks you to play it back
   hear-chord: |
-    wise chooses a base note and a chord; it names the base note and
-    plays it as well as the chord. Then you are expected to identify
-    the chord
+    taking the harp key as base, the wise chooses a chord (e.g. IV)
+    and maybe one of its variations; then it plays the base note as
+    well as the chord. You are expected to identify the chord
 samples:
   record: |
     harpwise assists while you play the holes for the given type and
