new player Buddy Greene

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -494,12 +494,13 @@
   notes:
   - Uses overblows regularly, learned from Howard Levy.
   - Formed the blues/jazz fusion band the Delcomos in 1990.
+  - Worked with Kevin Breit, Bruce Cockburn, Holly Cole and Kim Mitchell
   source: https://en.wikipedia.org/wiki/Carlos_del_Junco
   songs:
+  - Blue Drag
   - Diddle It
   - Blues del Junco
 
-  
 - name: Sugar Blue
   bio:
   - December 16, 1949 -
@@ -678,4 +679,16 @@
   - Blues Bend Boogie
   - The Blues will never leave you
   - Pour le Meilleur
-  - Mississippi Strut  
+  - Mississippi Strut
+
+- name: Buddy Greene
+  bio:
+  - October 30, 1953 -
+  - American singer, songwriter, guitar player and harmonica player
+  notes:
+  - Mostly plays gospel, influenced by country and bluegrass
+  source:
+  - https://en.wikipedia.org/wiki/Buddy_Greene
+  songs:
+  - Co-wrote the christmas song "Mary, Did You Know?"
+  - Orange Blossom Special
