new player Roly Platt

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -687,8 +687,26 @@
   - American singer, songwriter, guitar player and harmonica player
   notes:
   - Mostly plays gospel, influenced by country and bluegrass
-  source:
-  - https://en.wikipedia.org/wiki/Buddy_Greene
+  source: https://en.wikipedia.org/wiki/Buddy_Greene
   songs:
   - Co-wrote the christmas song "Mary, Did You Know?"
   - Orange Blossom Special
+
+- name: Roly Platt
+  bio:
+  - July 5, 1958 -
+  - Studio harmonica player and teacher
+  - Canadian blues artist
+  - Pete Pedersen Lifetime Achievement Award
+  - Two Double Platinum & Juno Award album credits
+  source: https://rolyplatt.com/roly-platt-bio-harmonica
+  notes:
+  - Invented and popularized the "Harp Wah"
+  - 45 year caeer as a live and studio harmonica player
+  - Has been recorded on over 1,700 individual album cuts,
+  - movie scores and national jingles
+  - Plays Swing, Country Rock, R&B & Traditional Jazz
+  songs:
+  - Shuffle the deck
+  - "Book: \"No, Seriously, I Play Harmonica\""
+  - Somewhere over the rainbow
