--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -97,7 +97,7 @@ tools:
     calculate and print interval between two notes
   chords: |
     print chords i, iv and v for current key
-  transcribe, trans: |
+  transcribe: |
     transcribe given audio-file approximately
   search-holes-in-licks: |
     search given sequence of holes (or equiv) in all licks; the same
@@ -112,6 +112,10 @@ tools:
     given scale and group and sort them accordingly.  This may give an
     idea, which of all licks can be played over the given scale
     (e.g. chord-i or blues)
+  translate: |
+    Recognize and translate alternate harmonica notations into the
+    format required for harpwise; e.g. turn "2 (2) 3" into "+2 -2 +3";
+    Currently this is optimized for diatonic harmonicas.
   utils, utilities: |
     Describe some utilities, that come with harpwise and need
     to be invoked seperately.
