--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -131,11 +131,11 @@ tools:
     check that mp3 can be played without problems.
   diag3: |
     check that frequencies picked up by your microphone can be
-    recognized properly; for this the check 'diag' should have
+    recognized properly; for this the check 'diag1' should have
     been performed sucessfully first.
   diag-hints: |
     read technical hints on how to fix some of the problems, that
-    might have come up with the diag-tools.
+    might have come up with the other diag-tools.
 quiz:
   all, ran, random: |
     all flavours, one at random
