new player Toots Thielemans

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -733,4 +733,25 @@
   - Superstition
   - Happy Birthday
 
+- name: Toots Thielemans
+  bio:
+  - 29 April, 1922 - 22 August, 2016
+  - Belgian jazz musician and chromatic harmonica-player
+  - Emigrated to the US in 1951
+  source: https://en.wikipedia.org/wiki/Toots_Thielemans
+  notes:
+  - Made the Harmonica a "legitimate voice in jazz"
+  - Started to make music at the age of three
+  - Was influenced by Django Reinhardt
+  - Played with Benny Goodman, Ella Fitzgerald, Dizzy Gillespie,
+  - Quincy Jones, Natalie Cole, Billy Joel, Paul Simon and others
+  - Was awarded the highest U.S. honour that can be accorded to a
+  - jazz musician, the distinction of "Jazz Master", by The National
+  - Endowment for the Arts
+  - A metro station in Brussels is named after him
+  songs:
+  - Sunny Day (Sesame Street closing-theme)
+  - Bluesette (composition)
+  - One For My Baby (And One More For The Road)
+
 # Next: DeFord Bailey, Stevie Wonder, Larry Adler, Adam Gussow, Boris Plotnikov, Alex Paclin, Toots Thielemans, Bob Dylan
