new player Adam Gussow

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -792,13 +792,38 @@
   - artists during the 1930s
   - Was fired 1941 due to conflicts in the music industrie and made
   - his living with a shoe shining company
-  - Continued to play the harmonica, he rarely performed publicly
+  - Continued to play the harmonica, but he rarely performed publicly
   songs:
   - Pan-American Blues
   - John Henry
   - Fox Chase
 
+- name: Adam Gussow
+  bio:
+  - April 3, 1958 -
+  - American blues harmonica player and author
+  - Best known as a member of Satan and Adam
+  source: https://en.wikipedia.org/wiki/Adam_Gussow
+  notes:
+  - Son of a Jewish father and Protestant mother,[3] and was educated at
+  - Princeton University and Columbia University
+  - Credits his music career to the mentorship of two older
+  - "African-American performers: Nat Riddles, a New York harmonica"
+  - player, and guitarist Sterling Magee
+  - One of the first amplified blues harp players to make overblows a
+  - key element of his stylistic approach
+  - Author of ModernBluesHarmonica.com
+  - Gussow's YouTube channel features more than 500 videos and tutorials
+  - teaching on playing blues harmonica
+  - His first solo album, Kick and Stomp, (2010) features him as a
+  - one-man band, playing harmonica and percussion  
+  - Professor of English and Southern Studies at the University of
+  - Mississippi
+  songs:
+  - Big Boss Man
+  - Tequila
+  - Weep & Moan
+
 # Formatting hints: Regarding long sentences that must be split on two
 # lines: they start with a capital letter but do not end with a dot (.)
 
-# Next: Adam Gussow, Bob Dylan
